# shoreline

./: LICENSE  README.md
ClientServerManagers/: CMakeLists.txt  Config.cmake.in  README.md  chefRunner.cpp  configureShoreline.sh  main.cpp  phastaChefRunner.cpp  shClient.cpp  shPhasta.cpp  shServer.cpp  softSetup.sh  summitConfigShoreline.sh
ClientServerManagers/src/: MeshCourier.cpp  MeshCourier.h  MeshCourierCatalyst.h  MeshCourierClient.cpp  MeshCourierClient.h  MeshCourierServer.cpp  MeshCourierServer.h  MeshMapper.cpp  MeshMapper.h  MeshMill.cpp  MeshMill.h  MeshMillDDG.h  MeshMillDDG_ElemAssembly.cpp  MeshMillDDG_ElemFormation.cpp  MeshMillDDG_SetupSolver.cpp  MeshMillDDG_SolveMeshMotion.cpp  MeshMill_ElemAssembly.cpp  MeshMill_ElemFormation.cpp  MeshMill_SetupSolver.cpp  MeshMill_SolveMeshMotion.cpp  MeshMill_ViewMatrix.cpp  MeshQuality.h  ShorelineMPI.cpp  ShorelineMPI.h
ParaViewPlugins/createHarmonicSkeleton/: CMakeLists.txt
ParaViewPlugins/createHarmonicSkeleton/Plugin/: paraview.plugin
ParaViewPlugins/createHarmonicSkeleton/Plugin/createSkeletonFilters/: CMakeLists.txt  createSkeletonFilter.xml  helperSkeletonFilter.cxx  vtkcreateSkeletonFilter.cxx  vtkcreateSkeletonFilter.h
ParaViewPlugins/createPinocchioSkeleton/: CMakeLists.txt
ParaViewPlugins/createPinocchioSkeleton/Plugin/: CMakeLists.txt
ParaViewPlugins/createPinocchioSkeleton/Plugin/createSkeletonFilters/: CMakeLists.txt  createSkeletonFilter.xml  vtk.module  vtkcreateSkeletonFilter.cxx  vtkcreateSkeletonFilter.h
ParaViewPlugins/detectFeatures/: CMakeLists.txt
ParaViewPlugins/detectFeatures/Plugin/: CMakeLists.txt  paraview.plugin
ParaViewPlugins/detectFeatures/Plugin/Filters/: CMakeLists.txt  DetectFeaturesFilter.cxx  DetectFeaturesFilter.h  DetectFeaturesFilter.xml  vtk.module
ParaViewPlugins/exportDisplacement/: CMakeLists.txt
ParaViewPlugins/exportDisplacement/Plugin/: CMakeLists.txt  paraview.plugin
ParaViewPlugins/exportDisplacement/Plugin/Filters/: CMakeLists.txt  exportDisplacementFilter.cxx  exportDisplacementFilter.h  exportDisplacementFilter.xml  vtk.module
ParaViewPlugins/interactiveSkeleton/: CMakeLists.txt
ParaViewPlugins/interactiveSkeleton/Plugin/: CMakeLists.txt  paraview.plugin  pqMyPolyLineWidget.cxx  pqMyPolyLineWidget.h  pqMyPolyLineWidget.ui
ParaViewPlugins/interactiveSkeleton/Plugin/Filters/: CMakeLists.txt  vtk.module  vtkInteractiveSkeletonFilter.cxx  vtkInteractiveSkeletonFilter.h  vtkInteractiveSkeletonFilter.xml  vtkMySkeletonRepresentation.cxx  vtkMySkeletonRepresentation.h  vtkMySkeletonSource.cxx  vtkMySkeletonSource.h  vtkMySkeletonWidget.cxx  vtkMySkeletonWidget.h
ParaViewPlugins/scaleDirection/: CMakeLists.txt  LICENSE
ParaViewPlugins/scaleDirection/Plugin/: CMakeLists.txt  paraview.plugin
ParaViewPlugins/scaleDirection/Plugin/Filters/: CMakeLists.txt  scaleDirectionFilter.cxx  scaleDirectionFilter.h  scaleDirectionFilter.xml  vtk.module
ParaViewPlugins/scaleNormal/: CMakeLists.txt
ParaViewPlugins/scaleNormal/Plugin/: CMakeLists.txt  paraview.plugin
ParaViewPlugins/scaleNormal/Plugin/Filters/: CMakeLists.txt  scaleNormalFilter.cxx  scaleNormalFilter.h  scaleNormalFilter.xml  vtk.module
ParaViewPlugins/translateFeature/: CMakeLists.txt
ParaViewPlugins/translateFeature/Plugin/: CMakeLists.txt  paraview.plugin
ParaViewPlugins/translateFeature/Plugin/Filters/: CMakeLists.txt  translateFeatureFilter.cxx  translateFeatureFilter.h  translateFeatureFilter.xml  vtk.module
